--- a/components/input/package.json
+++ b/components/input/package.json
@@ -2,195 +2,60 @@
   "//": [
     "================================================================================",
     "# To work within the development environment, run the following tasks",
-    "  1. $ npm run dev",
-    "  2. Go to http://localhost:8000",
+    " 1. $ npm run dev",
+    " 2. Go to http://localhost:8000",
     "================================================================================"
   ],
-  "name": "@aurodesignsystem/auro-input",
+  "name": "@aurodesignsystem/auro-formkit.input",
   "version": "4.2.0",
   "description": "auro-input HTML custom element",
+  "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "tsc",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/AlaskaAirlines/auro-input"
   },
-  "type": "module",
-  "main": "index.js",
-  "module": "index.js",
-  "types": "index.d.ts",
-  "license": "Apache-2.0",
-  "engines": {
-    "node": "^18 || ^20"
+  "scripts": {
+    "build": "npm-run-all build:version build:sass build:js types",
+    "dev": "concurrently --kill-others 'npm run build:watch' 'npm run serve'",
+    "test": "wtr --coverage",
+    "lint": "npm-run-all lint:js lint:scss",
+    "clean": "rm -rf dist build .turbo",
+    "build:js": "rollup -c ../../packages/config/rollup/component.js",
+    "build:sass": "sass --no-source-map --load-path=../../node_modules --load-path=. \"./src/styles:./dist/styles\"",
+    "build:version": "auro-form-version",
+    "build:watch": "nodemon -e scss,js --watch src --exec npm run build:sass",
+    "lint:js": "eslint . --config ../../packages/config/eslint/component.js",
+    "lint:scss": "stylelint \"**/*.scss\" --config ../../packages/config/stylelint/component.js",
+    "test:watch": "wtr --watch",
+    "serve": "web-dev-server --open demo/ --node-resolve --watch",
+    "build:demo": "npm-run-all demo:clean demo:mkdir demo:copy",
+    "demo:clean": "rm -rf ./build",
+    "demo:mkdir": "mkdir -p ./build/css ./build/demo",
+    "demo:copy": "npm-run-all demo:copy:*",
+    "demo:copy:html": "copyfiles -u 1 './demo/index.html' ./build",
+    "demo:copy:md": "copyfiles -u 1 './demo/index.md' ./build/demo"
   },
   "dependencies": {
-    "@aurodesignsystem/auro-button": "^8.1.3",
-    "@aurodesignsystem/auro-formvalidation": "^1.0.4",
-    "@aurodesignsystem/auro-icon": "^6.0.3",
-    "@aurodesignsystem/auro-library": "~2.8",
-    "chalk": "^5.3.0",
-    "cleave.js": "^1.6.0",
-    "lit": "^3.2.1"
+    "@aurodesignsystem/auro-button": "^8.1.2",
+    "lit": "^3.2.0"
+  },
+  "devDependencies": {
+    "@auro-formkit/build-tools": "workspace:*",
+    "@auro-formkit/config": "workspace:*",
+    "@auro-formkit/typescript": "workspace:*",
+    "@aurodesignsystem/design-tokens": "^4.9.2",
+    "@web/dev-server": "^0.4.6",
+    "@web/test-runner": "^0.19.0"
   },
   "peerDependencies": {
-    "@alaskaairux/icons": "^4.43.0",
     "@aurodesignsystem/design-tokens": "^4.9.2",
     "@aurodesignsystem/webcorestylesheets": "^5.1.2"
   },
-  "devDependencies": {
-    "@alaskaairux/icons": "^4.44.1",
-    "@aurodesignsystem/design-tokens": "^4.10.1",
-    "@aurodesignsystem/eslint-config": "^1.3.3",
-    "@aurodesignsystem/webcorestylesheets": "^5.1.2",
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@open-wc/testing": "^4.0.0",
-    "@rollup/plugin-node-resolve": "^15.3.0",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/npm": "^12.0.1",
-    "@web/dev-server": "^0.4.6",
-    "@web/test-runner": "^0.19.0",
-    "autoprefixer": "^10.4.20",
-    "babel-loader": "^9.2.1",
-    "backstopjs": "^6.3.25",
-    "compression": "^1.7.5",
-    "concat": "^1.0.3",
-    "concurrently": "^9.1.0",
-    "copyfiles": "^2.4.1",
-    "core-js": "^3.39.0",
-    "eslint": "^9.14.0",
-    "eslint-plugin-jsdoc": "^50.5.0",
-    "husky": "^9.1.6",
-    "lodash": "^4.17.21",
-    "markdown-magic": "^3.3.0",
-    "nodemon": "^3.1.7",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.49",
-    "postcss-custom-properties": "^14.0.4",
-    "postcss-discard-comments": "^7.0.3",
-    "rollup": "^4.25.0",
-    "rollup-plugin-serve": "^2.0.3",
-    "sass": "^1.80.7",
-    "semantic-release": "^24.2.0",
-    "sinon": "^19.0.2",
-    "stylelint": "^16.10.0",
-    "stylelint-config-idiomatic-order": "^10.0.0",
-    "stylelint-config-standard": "^36.0.1",
-    "stylelint-config-standard-scss": "^13.1.0",
-    "stylelint-order": "^6.0.4",
-    "stylelint-scss": "^6.9.0",
-    "typescript": "^5.6.3",
-    "stylelint-scss": "^6.7.0",
-    "turbo": "^2.2.3",
-    "typescript": "^5.6.2",
-    "wc-sass-render": "^1.4.0",
-    "web-component-analyzer": "^2.0.0",
-    "whatwg-fetch": "^3.6.20",
-    "yaml-lint": "^1.7.0"
-  },
-  "overrides": {
-    "wc-sass-render": {
-      "sass": "$sass"
-    }
-  },
-  "browserslist": [
-    "last 2 Chrome versions",
-    "last 2 iOS major versions",
-    "last 2 Firefox versions",
-    "last 2 Edge versions",
-    "last 2 Safari major versions"
-  ],
-  "nodemonConfig": {
-    "ignore": [
-      "*-css.js",
-      "*.css"
-    ]
-  },
-  "release": {
-    "branches": [
-      {
-        "name": "main"
-      },
-      {
-        "name": "beta",
-        "prerelease": true
-      }
-    ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      [
-        "@semantic-release/changelog",
-        {
-          "changelogFile": "./CHANGELOG.md",
-          "changelogTitle": "# Semantic Release Automated Changelog"
-        }
-      ],
-      "@semantic-release/npm",
-      [
-        "@semantic-release/git",
-        {
-          "assets": [
-            "./package.json",
-            "./CHANGELOG.md",
-            "./README.md",
-            "./docs/api.md",
-            "./demo/demo.md",
-            "./demo/apiExamples.md"
-          ]
-        }
-      ],
-      "@semantic-release/github"
-    ]
-    "@aurodesignsystem/design-tokens": "^4.9.2"
-  },
-  "scripts": {
-    "build": "npm-run-all build:version build:sass sass:render bundler types",
-    "build:test": "npm-run-all test linters",
-    "build:release": "npm-run-all build build:test build:api build:docs bundler postinstall",
-    "build:ci": "npm-run-all sweep build:release",
-    "build:api": "wca analyze 'src/auro-input.js' --outFiles docs/api.md",
-    "build:demo": "npm-run-all build demo:rm:build demo:new:build demo:copy:index demo:copy:demo demo:update:index",
-    "build:dev:assets": "npm-run-all build:sass:component postCss:component sass:render",
-    "build:docs": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/generateDocs.mjs",
-    "build:sass": "npm-run-all build:sass:input postCss:input sass:render",
-     "build:sass:input": "sass --no-source-map --load-path=../../node_modules --load-path=. \"./src:./src\"",
-    "build:version": "node ./src/scripts/version.mjs",
-    "build:watch": "nodemon -e scss,js --watch src --exec npm run build:dev:assets",
-    "bundler": "rollup -c",
-    "bundler:test": "rollup -c -w",
-    "scssLint": "stylelint \"./src/**/*.scss\"",
-    "demo:copy:demo": "copyfiles -u 1 -V './demo/index.md' ./build/demo",
-    "demo:copy:index": "copyfiles -u 1 -V './demo/index.html' ./build",
-    "demo:new:build": "mkdir ./build && mkdir ./build/css && mkdir ./build/demo",
-    "demo:rm:build": "rm -rf ./build",
-    "demo:update:index": "node ./scripts/prepForBuild",
-    "dev": "concurrently --kill-others 'npm run build:watch' 'npm run serve'",
-    "dist:js": "copyfiles -u 1 -V './src/**/*.js' ./dist",
-    "esLint": "eslint './**/*.js'",
-    "linters": "npm-run-all scssLint esLint",
-    "preCommit": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/pre-commit.mjs",
-   "postCss:input": "node ../../node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
-    "postinstall": "node packageScripts/postinstall.mjs",
-    "sass:render": "sass-render 'src/**/*.css' 'components/**/*.css' -t ../../node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
-    "serve": "web-dev-server --open demo/ --node-resolve --watch",
-    "sweep": "rm -rf ./dist | find ./demo ./dist ./src -type f \\( -name \"*.css\" -o -name \"*-css.js\" \\) -delete",
-    "test": "wtr --coverage",
-    "test:watch": "wtr --watch",
-    "prepare": "husky install",
-    "vrt:approve": "backstop approve",
-    "vrt:ref": "backstop reference",
-    "vrt:report": "backstop openReport",
-    "vrt:test": "backstop test",
-    "types": "tsc",
-    "postversion": "npm-run-all build:api build:docs"
-  },
   "publishConfig": {
     "access": "public"
-  },
-  "keywords": [
-    "alaska airlines",
-    "auro",
-    "design system",
-    "web components"
-  ]
+  }
 }
