--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@aurodesignsystem/auro-library": "^3.0.2"
   },
   "devDependencies": {
+    "@aurodesignsystem/auro-library": "^3.0.2",
     "@aurodesignsystem/eslint-config": "^1.3.3",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
