--- a/package.json
+++ b/package.json
@@ -149,7 +149,7 @@
   ],
   "scripts": {
     "dev": "npm run dev:input",
-    "build": "npm-run-all build:form build:input build:dropdown build:checkbox build:menu build:radio build:sass sass:render bundler types",
+    "build": "npm-run-all build:form build:input build:dropdown build:checkbox build:menu build:radio build:select build:sass sass:render bundler types",
     "build:test": "npm-run-all test linters",
     "build:release": "npm-run-all build build:test build:api build:docs bundler postinstall",
     "build:ci": "npm-run-all sweep build:release",
