--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@aurodesignsystem/auro-formvalidation": "^1.0.4",
     "@aurodesignsystem/auro-icon": "^6.0.3",
     "@aurodesignsystem/auro-library": "^3.0.2",
+    "@aurodesignsystem/auro-popover": "^4.1.1",
     "@floating-ui/dom": "^1.6.11",
     "cleave.js": "^1.6.0",
     "focus-visible": "^5.2.1",
-    "lit": "^3.2.0"
+    "lit": "^3.2.0",
+    "wc-range-datepicker": "^1.3.0"
   },
   "peerDependencies": {
     "@aurodesignsystem/design-tokens": "^4.9.2",
@@ -149,7 +151,7 @@
   ],
   "scripts": {
     "dev": "npm run dev:input",
-    "build": "npm-run-all build:form build:input build:dropdown build:checkbox build:menu build:radio build:select build:combobox build:sass sass:render bundler types",
+    "build": "npm-run-all build:form build:input build:dropdown build:checkbox build:menu build:radio build:select build:combobox build:datepicker build:sass sass:render bundler types",
     "build:test": "npm-run-all test linters",
     "build:release": "npm-run-all build build:test build:api build:docs bundler postinstall",
     "build:ci": "npm-run-all sweep build:release",
@@ -264,7 +266,7 @@
     "build:dropdown:release": "npm-run-all build:dropdown:full build:test build:demo:dropdown",
     "build:menu:release": "npm-run-all build:menu:full build:test build:demo:menu",
     "sweep": "rm -rf dist && find ./demo ./src ./components -not -path \"*/node_modules/*\" -type f \\( -name \"*.css\" -o -name \"*-css.js\" \\) -delete",
-    "test": "npm-run-all test:input test:dropdown test:form test:checkbox test:menu test:radio test:select test:combobox",
+    "test": "npm-run-all test:input test:dropdown test:form test:checkbox test:menu test:radio test:select test:combobox test:datepicker",
     "test:watch": "wtr --watch",
     "test:form": "wtr \"./components/form/test/**/*.test.js\" --coverage",
     "test:form:watch": "wtr \"./components/form/test/**/*.test.js\" --watch",
@@ -295,7 +297,7 @@
     "preCommit": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/pre-commit.mjs",
     "postversion": "npm-run-all build:api build:docs",
     "prepare": "husky install",
-    
+
     "dev:select": "concurrently --kill-others \"npm run build:watch:select\" \"npm run serve:select\"",
     "build:select": "npm-run-all build:version:select build:sass:select sass:render:select types",
     "build:demo:select": "npm-run-all build:select demo:rm:build demo:new:build demo:copy:index:select demo:copy:demo:select demo:update:index",
@@ -338,6 +340,28 @@
     "test:combobox:watch": "wtr \"./components/combobox/test/**/*.test.js\" --watch",
     "linters:combobox": "npm-run-all scssLint:combobox esLint:combobox",
     "scssLint:combobox": "stylelint \"./components/combobox/**/*.scss\"",
-    "esLint:combobox": "eslint 'components/combobox/**/*.js'"
+    "esLint:combobox": "eslint 'components/combobox/**/*.js'",
+    
+    "dev:datepicker": "concurrently --kill-others \"npm run build:watch:datepicker\" \"npm run serve:datepicker\"",
+    "build:datepicker": "npm-run-all build:version:datepicker build:sass:datepicker sass:render:datepicker types",
+    "build:demo:datepicker": "npm-run-all build:datepicker demo:rm:build demo:new:build demo:copy:index:datepicker demo:copy:demo:datepicker demo:update:index",
+    "demo:copy:demo:datepicker": "copyfiles -u 1 -V \"./components/datepicker/src/demo/**/*\" ./build/demo",
+    "demo:copy:index:datepicker": "copyfiles -u 1 -V \"./components/datepicker/src/demo/index.html\" ./build",
+    "build:dev:assets:datepicker": "npm-run-all build:sass:datepicker postCss:datepicker sass:render:datepicker",
+    "build:docs:datepicker": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/generateDocs.mjs",
+    "build:sass:datepicker": "sass --no-source-map --load-path=node_modules --load-path=. \"./components/datepicker/src:./components/datepicker/src\"",
+    "build:version:datepicker": "cross-env npm_config_component=datepicker node ./components/datepicker/src/scripts/version.mjs",
+    "build:watch:datepicker": "nodemon -e scss,js --watch \"./components/datepicker/src\" --ignore \"*.css\" --ignore \"*-css.js\" --ignore \"*.version.js\" --ignore \"*Version.js\" --exec \"npm run build:datepicker\"",
+    "dist:js:datepicker": "copyfiles -u 1 -V \"./components/datepicker/src/**/*.js\" ./dist",
+    "postCss:datepicker": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
+    "sass:render:datepicker": "sass-render --load-path=node_modules \"./components/datepicker/src/**/*.css\" -t ./node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
+    "serve:datepicker": "web-dev-server --open components/datepicker/demo/ --node-resolve --watch --app-index \"./components/datepicker/demo/index.html\"",
+    "build:datepicker:full": "npm-run-all build:datepicker build:api:datepicker build:docs:datepicker build:dev:assets:datepicker",
+    "build:datepicker:release": "npm-run-all build:datepicker:full build:test build:demo:datepicker",
+    "test:datepicker": "wtr \"./components/datepicker/test/**/*.test.js\" --coverage",
+    "test:datepicker:watch": "wtr \"./components/datepicker/test/**/*.test.js\" --watch",
+    "linters:datepicker": "npm-run-all scssLint:datepicker esLint:datepicker",
+    "scssLint:datepicker": "stylelint \"./components/datepicker/**/*.scss\"",
+    "esLint:datepicker": "eslint 'components/datepicker/**/*.js'"
   }
 }
