--- a/components/dropdown/package.json
+++ b/components/dropdown/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "@aurodesignsystem/auro-icon": "^5.0.0",
     "@popperjs/core": "^2.11.8",
-    "chalk": "^5.2.0"
+    "chalk": "^5.2.0",
+    "lit": "^3.2.1"
   },
   "peerDependencies": {
     "@aurodesignsystem/design-tokens": "^4.9.2",
