--- a/components/input/package.json
+++ b/components/input/package.json
@@ -23,7 +23,8 @@
     "@aurodesignsystem/auro-formvalidation": "^1.0.4",
     "@aurodesignsystem/auro-icon": "^6.0.2",
     "chalk": "^5.3.0",
-    "cleave.js": "^1.6.0"
+    "cleave.js": "^1.6.0",
+    "lit": "^3.2.1"
   },
   "peerDependencies": {
     "@alaskaairux/icons": "^4.43.0",
