--- a/.github/workflows/testPublish.yml
+++ b/.github/workflows/testPublish.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm run build
-      - run: npm run build:test
+      - run: npm run test
 
   release:
     # Only release on push to main
