--- a/.github/workflows/testPublish.yml
+++ b/.github/workflows/testPublish.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           node-version: 20.x
       - run: npm ci
-      - run: npm run build:release
+      - run: npm run build
       - uses: cycjimmy/semantic-release-action@v4
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
