--- a/package.json
+++ b/package.json
@@ -123,10 +123,9 @@
             "./package.json",
             "./CHANGELOG.md",
             "./README.md",
-            "./docs/api.md",
-            "./demo/index.md",
-            "./demo/api.md"
-          ]
+            "./docs/api.md"
+          ],
+          "noVerify": true
         }
       ],
       "@semantic-release/github"
