--- a/.github/workflows/testPublish.yml
+++ b/.github/workflows/testPublish.yml
@@ -41,7 +41,19 @@ jobs:
           node-version: 20.x
       - run: npm ci
       - run: npm run build
-      - uses: cycjimmy/semantic-release-action@v4
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v4
+        with:
+          semantic_version: 24.x.x
+          ci: false
+          branches: |
+            [
+              'main',
+              {
+                name: 'beta',
+                prerelease: true
+              }
+            ]
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
