--- a/.github/workflows/testPublish.yml
+++ b/.github/workflows/testPublish.yml
@@ -41,6 +41,7 @@ jobs:
           node-version: 20.x
       - run: npm ci
       - run: npm run build
+      - run: git config --unset core.hooksPath
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
         with:
