--- a/components/counter/package.json
+++ b/components/counter/package.json
@@ -35,7 +35,7 @@
   },
   "scripts": {
     "build": "run-s sass bundler build:docs types",
-    "build:version": "node ./src/scripts/version.mjs",
+    "build:version": "node ./scripts/version.mjs",
     "build:sass": "sass --no-source-map --load-path=../../node_modules \"./src/styles/:./src/styles/\"",
     "build:watch": "nodemon -e scss,js --watch src --ignore \"*.css\" --ignore \"*-css.js\" --exec \"npm run build\"",
     "build:docs": "wca analyze 'scripts/wca/*.js' --outFiles docs/api.md; node ../../packages/build-tools/src/docProcessor.mjs --component counter",
