--- a/components/counter/package.json
+++ b/components/counter/package.json
@@ -12,9 +12,10 @@
   "types": "dist/index.d.ts",
   "license": "Apache-2.0",
   "dependencies": {
+    "@alaskaairux/icons": "^4.44.1",
+    "@aurodesignsystem/auro-button": "^8.2.1",
     "chalk": "^5.2.0",
-    "lit": "^3.2.1",
-    "@aurodesignsystem/auro-button": "^8.2.1"
+    "lit": "^3.2.1"
   },
   "peerDependencies": {
     "@aurodesignsystem/design-tokens": "^4.12.1",
@@ -24,6 +25,7 @@
     "@auro-formkit/build-tools": "*",
     "@auro-formkit/config": "*",
     "@auro-formkit/typescript": "*",
+    "@auro-formkit/utils": "*",
     "@aurodesignsystem/design-tokens": "^4.12.1",
     "@aurodesignsystem/webcorestylesheets": "^5.1.2",
     "@rollup/plugin-node-resolve": "^15.3.0",
