--- a/components/form/package.json
+++ b/components/form/package.json
@@ -28,6 +28,9 @@
     "@auro-formkit/typescript": "*",
     "@aurodesignsystem/auro-datepicker": "*",
     "@aurodesignsystem/auro-input": "*",
+    "@aurodesignsystem/auro-combobox": "*",
+    "@aurodesignsystem/auro-menu": "*",
+    "@aurodesignsystem/auro-counter": "*",
     "@aurodesignsystem/design-tokens": "^4.12.1",
     "@aurodesignsystem/webcorestylesheets": "^5.1.2",
     "@rollup/plugin-node-resolve": "^15.3.0",
