--- a/.github/actions/surge/action.yml
+++ b/.github/actions/surge/action.yml
@@ -1,5 +1,5 @@
 name: "Component PR Preview"
-description: "Deploy or teardown a single component to/from Surge"
+description: "Deploy or teardown a single component to/from Surge with GitHub deployment status integration"
 
 inputs:
   action:
@@ -20,6 +20,12 @@ inputs:
   github-token:
     description: "GitHub token for PR comments"
     required: true
+
+permissions:
+  contents: read
+  deployments: write
+  issues: write
+  pull-requests: write
 
 runs:
   using: "composite"
@@ -47,23 +53,106 @@ runs:
           const demoPath = process.env.DEMO_PATH;
           const surgeToken = process.env.SURGE_TOKEN;
           const githubToken = process.env.GITHUB_TOKEN;
-
-          if (action === 'deploy') {
-            // Deploy to Surge
-            if (fs.existsSync(demoPath)) {
-              execSync(`surge ${demoPath} https://auro-formkit-${component}-${prNumber}.surge.sh --token ${surgeToken}`, { stdio: 'inherit' });
-              console.log(`Deployed ${component} to Surge`);
+          
+          // Get repo information from GitHub context
+          const owner = context.repo.owner;
+          const repo = context.repo.repo;
+          const sha = context.sha;
+          const deploymentUrl = `https://auro-formkit-${component}-${prNumber}.surge.sh`;
+          
+          // GitHub API for deployment status
+          async function createDeployment() {
+            return await github.rest.repos.createDeployment({
+              owner,
+              repo,
+              ref: sha,
+              environment: `${component} demo - PR ${prNumber}`,
+              auto_merge: false,
+              required_contexts: [],
+              description: `Deploy preview for ${component}`,
+              transient_environment: true,
+              production_environment: false
+            });
+          }
+          
+          async function updateDeploymentStatus(deploymentId, state, description, environmentUrl) {
+            return await github.rest.repos.createDeploymentStatus({
+              owner,
+              repo,
+              deployment_id: deploymentId,
+              state,
+              description,
+              environment_url: environmentUrl,
+              auto_inactive: false,
+              log_url: environmentUrl
+            });
+          }
+          
+          try {
+            if (action === 'deploy') {
+              // Create a deployment on GitHub
+              console.log(`Creating deployment for ${component}...`);
+              const deployment = await createDeployment();
+              const deploymentId = deployment.data.id;
+              
+              // Update status to 'in_progress'
+              await updateDeploymentStatus(deploymentId, 'in_progress', 'Deploying to Surge...', deploymentUrl);
+              
+              // Deploy to Surge
+              if (fs.existsSync(demoPath)) {
+                execSync(`surge ${demoPath} ${deploymentUrl} --token ${surgeToken}`, { stdio: 'inherit' });
+                console.log(`Deployed ${component} to Surge: ${deploymentUrl}`);
+                
+                // Update status to 'success'
+                await updateDeploymentStatus(deploymentId, 'success', 'Deployment successful', deploymentUrl);
+                
+                // Add a comment to the PR with the preview URL
+                await github.rest.issues.createComment({
+                  owner,
+                  repo,
+                  issue_number: prNumber,
+                  body: `✅ Preview for **${component}** deployed to: [${deploymentUrl}](${deploymentUrl})`
+                });
+                
+                process.exit(0);
+              } else {
+                console.error(`Directory ${demoPath} does not exist`);
+                
+                // Update status to 'failure'
+                await updateDeploymentStatus(deploymentId, 'failure', `Error: Directory ${demoPath} does not exist`, deploymentUrl);
+                process.exit(1);
+              }
+            } else if (action === 'teardown') {
+              // Find active deployments for this environment
+              const deployments = await github.rest.repos.listDeployments({
+                owner,
+                repo,
+                environment: `PR ${prNumber} - ${component}`
+              });
+              
+              // Mark deployments as inactive
+              for (const deployment of deployments.data) {
+                await updateDeploymentStatus(deployment.id, 'inactive', 'Deployment removed', deploymentUrl);
+              }
+              
+              // Teardown from Surge
+              execSync(`surge teardown ${deploymentUrl} --token ${surgeToken}`, { stdio: 'inherit' });
+              console.log(`Teared down ${component} from Surge: ${deploymentUrl}`);
+              
+              // Add a comment to the PR
+              await github.rest.issues.createComment({
+                owner,
+                repo,
+                issue_number: prNumber,
+                body: `🔄 Preview for **${component}** has been removed`
+              });
+              
               process.exit(0);
             } else {
-              console.error(`Directory ${demoPath} does not exist`);
+              console.error('Invalid action. Use "deploy" or "teardown".');
               process.exit(1);
             }
-          } else if (action === 'teardown') {
-            // Teardown from Surge
-            execSync(`surge teardown https://auro-formkit-${component}-${prNumber}.surge.sh --token ${surgeToken}`, { stdio: 'inherit' });
-            console.log(`Teared down ${component} from Surge`);
-            process.exit(0);
-          } else {
-            console.error('Invalid action. Use "deploy" or "teardown".');
+          } catch (error) {
+            console.error(`Error: ${error.message}`);
             process.exit(1);
           }
